--- a/src/app/danh-sach-users/danh-sach-users.component.html
+++ b/src/app/danh-sach-users/danh-sach-users.component.html
@@ -8,9 +8,28 @@
                       <h3 class="card-title ">Danh sách User</h3>
                   </div>
                   <div class="card-body">
-                      <mat-form-field>
-                          <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Tìm kiểm danh sách người dùng">
-                        </mat-form-field>
+                        <div class="row">
+                                <div class="col-md-6">
+                                        <mat-form-field>
+                                                <input matInput [(ngModel)]="timkiem" name="timkiem"  placeholder="Tìm kiểm danh sách người dùng">
+                                              </mat-form-field>
+                                </div>
+                                <div class="col-md-3">
+                                    <mat-form-field class="example-full-width">
+                                            <mat-select [(ngModel)]="sortby" (change)="onSortBy()" name="sortby" class="example-full-width">
+                                                <mat-option   value="name">
+                                                    Lọc theo tên
+                                                </mat-option>
+                                                <mat-option   value="email">                                              
+                                                    Lọc theo email
+                                                </mat-option>
+                                            </mat-select>
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-md-3">
+                                        <button (click)="applyFilter()" mat-raised-button color="primary">Tìm kiếm</button>
+                                </div>
+                            </div>
                         <mat-table  [dataSource]="dataSource">
                             <ng-container matColumnDef="UserID">
                                 <mat-header-cell *matHeaderCellDef>Id</mat-header-cell>
@@ -41,30 +60,36 @@
                                 <mat-cell *matCellDef="let user">
                                         <swal
                                         #kichhoat
-                                        title="Khóa tài khoàn người dùng "
+                                        title="Kích hoạt tài khoàn người dùng "
                                         text="Bạn có muốn kích hoạt {{user.username}} không ?" 
                                         type="warning"
                                         [showCancelButton]="true"
-                                        (confirm)="onClickLogout()">
+                                        (confirm)="onKickHoat(user.UserID)">
                                         </swal>
-                                    <a [swal]="kichhoat"  href="" *ngIf="user.TrangThai==1">Kích hoạt</a>
-                                    <a [swal]="kichhoat"  href="" *ngIf="user.TrangThai==0">Khóa</a>
+                                        <swal
+                                        #khoa
+                                        title="Khóa tài khoàn người dùng "
+                                        text="Bạn có muốn Khóa {{user.username}} không ?" 
+                                        type="warning"
+                                        [showCancelButton]="true"
+                                        (confirm)="onKhoa(user.UserID)">
+                                        </swal>
+                                    <a class="btn btn-info" [swal]="khoa"  href="" *ngIf="user.TrangThai==1">Kích hoạt</a>
+                                    <a class="btn btn-danger"  [swal]="kichhoat"  href="" *ngIf="user.TrangThai==0">Khóa</a>
                                 </mat-cell>
                             </ng-container>
                             <ng-container matColumnDef="thaotac">
-                                <mat-header-cell *matHeaderCellDef>Xem</mat-header-cell>
-                                <mat-cell *matCellDef="let user"><a class="btn btn-success" href="#"><i class="fa fa-eye" aria-hidden="true"></i></a></mat-cell>
+                                <mat-header-cell *matHeaderCellDef>Thao tác</mat-header-cell>
+                                <mat-cell *matCellDef="let user">
+                                    <a class="btn btn-success"  [routerLink]="['/themuser',{'UserID':user.UserID}]">Xem</a>
+                                </mat-cell>
                             </ng-container>
                             <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-                            
-                            <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+                            <mat-row *matRowDef="let row; columns: displayedColumns;">
+                            </mat-row>
                             
                         </mat-table>
-                        <mat-paginator #paginator
-                        [pageSize]="10"
-                        [pageSizeOptions]="[5, 10, 20]"
-                        [showFirstLastButtons]="true">
-                        </mat-paginator>
+                        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
                       </div>
                   </div>
               </div>
