--- a/src/app/truong/truong.component.html
+++ b/src/app/truong/truong.component.html
@@ -35,7 +35,7 @@
                   
                               <ng-container matColumnDef="thaotac">
                                   <mat-header-cell *matHeaderCellDef>Thao tác</mat-header-cell>
-                                  <mat-cell *matCellDef="let truong"><a class="btn btn-success" href="#"><i class="fa fa-eye" aria-hidden="true"></i></a></mat-cell>
+                                  <mat-cell *matCellDef="let truong"><a class="btn btn-success" href="#">Xem</a></mat-cell>
                               </ng-container>
                               <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
                               
