--- a/src/app/ds-nganh/ds-nganh.component.html
+++ b/src/app/ds-nganh/ds-nganh.component.html
@@ -16,7 +16,7 @@
                           </div>
                           <div class="col-md-3">
                               <mat-form-field class="example-full-width">
-                                  <mat-select [(ngModel)]="MaTruong" placeholder="Chọn trường" name="MaTruong" class="example-full-width">
+                                  <mat-select [(ngModel)]="MaTruong" placeholder="Chọn trường" name="MaTruong" (change)="onSelectedTruong()" class="example-full-width">
                                       <mat-option  *ngFor="let truong of truongs" [value]="truong.MaTruong">
                                         {{ truong.TenTruong }}
                                       </mat-option>
@@ -28,7 +28,7 @@
                           </div>
                       </div>
                       
-
+                      
                         <mat-table  [dataSource]="dataSource">
                             <ng-container matColumnDef="MaNH">
                                 <mat-header-cell *matHeaderCellDef>Mã ngành</mat-header-cell>
@@ -40,18 +40,14 @@
                             </ng-container>
                             <ng-container matColumnDef="thaotac">
                                 <mat-header-cell *matHeaderCellDef>Thao tác</mat-header-cell>
-                                <mat-cell *matCellDef="let nganh"><a class="btn btn-success" href="#"><i class="fa fa-eye" aria-hidden="true"></i></a></mat-cell>
+                                <mat-cell *matCellDef="let nganh"><a class="btn btn-success" href="#">Xem</a></mat-cell>
                             </ng-container>
                             <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-                            
-                            <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+                            <mat-row *matRowDef="let row; columns: displayedColumns;">
+                            </mat-row>
                             
                         </mat-table>
-                        <mat-paginator #paginator
-                        [pageSize]="10"
-                        [pageSizeOptions]="[5, 10, 20]"
-                        [showFirstLastButtons]="true">
-                        </mat-paginator>
+                        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
                       </div>
                   </div>
               </div>
