--- a/src/app/lien-he/lien-he.component.html
+++ b/src/app/lien-he/lien-he.component.html
@@ -8,34 +8,20 @@
                     </div>
                     <div class="card-body">
                         
-                        <form (ngSubmit)="onAddTruong()">
+                        <form (ngSubmit)="onSendEmail()">
                             <div class="row">
-                                <div class="col-md-4">
+                                <div class="col-md-6">
                                   <mat-form-field class="example-full-width">
-                                    <input [(ngModel)]="idTruong" required name="idTruong" matInput placeholder="1. Họ tên:" type="text">
+                                    <input [(ngModel)]="HoTen" required name="HoTen" matInput placeholder="1. Họ tên:" type="text">
                                   </mat-form-field>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-md-4">
+                                <div class="col-md-6">
                                     <mat-form-field class="example-full-width">
-                                        <input [(ngModel)]="DiaChi" name="DiaChi" matInput placeholder="2. Email:" required type="text">
+                                        <input [(ngModel)]="Email" name="Email" email="true" matInput placeholder="2. Email:" required type="text">
                                       </mat-form-field>
                                 </div>
-                                <div class="col-md-1">
-                                    <mat-form-field>
-                                   <input value="@" matInput disabled>
-                                   </mat-form-field>
-                                </div>
-                                <div class="col-md-2">
-                                    <mat-form-field>
-                                        <mat-select  required placeholder="">
-                                          <mat-option value="gmail.com">gmail.com</mat-option>
-                                          <mat-option value="yahoo.com">yahoo.com</mat-option>
-                                          <mat-option value="hotmail.com">hotmail.com</mat-option>
-                                        </mat-select>
-                                </mat-form-field>
-                              </div>
                             </div>
                             <div class="row">
                               <div class="col-md-12">
@@ -45,8 +31,9 @@
                             <div class="row">
                                 <div class="col-md-6">
                                       <mat-form-field>
-                                              <mat-select [(ngModel)]="ChooseNganh" name="ChooseNganh"  required placeholder="3. Chủ đề:" multiple>
-                                                <mat-option *ngFor="let nganh of nganhs" [value]="nganh.MaNH">{{nganh.TenNH}}</mat-option>
+                                              <mat-select [(ngModel)]="ChuDe" name="ChuDe"  required placeholder="3. Chủ đề:">
+                                                <mat-option value="Đóng góp ý kiến">Đóng góp ý kiến</mat-option>
+                                                <mat-option value="Câu hỏi">Câu hỏi</mat-option>
                                               </mat-select>
                                       </mat-form-field>
                                 </div>
@@ -54,7 +41,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                   <mat-form-field class="example-full-width">
-                                      <textarea matInput [(ngModel)]="TamNhin" name="TamNhin" placeholder="4. Nội dung:" type="text"></textarea>
+                                      <textarea style="resize: vertical;" matInput [(ngModel)]="NoiDung" name="NoiDung" placeholder="4. Nội dung:" type="text"></textarea>
                                   </mat-form-field>
                                 </div>
                             </div>
