--- a/src/app/them-sinhvien/them-sinhvien.component.html
+++ b/src/app/them-sinhvien/them-sinhvien.component.html
@@ -12,7 +12,7 @@
                           <div class="row">
                               <div class="col-md-6">
                                 <mat-form-field class="example-full-width">
-                                  <input [(ngModel)]="MaSV" required name="MaSV" matInput placeholder="MSSV" type="text">
+                                  <input [(ngModel)]="MaSV" [disabled]="isUpdate" required name="MaSV" matInput placeholder="MSSV" type="text">
                                 </mat-form-field>
                               </div>
                               <div class="col-md-6">
@@ -80,7 +80,25 @@
                               </div>
                           </div>
                           <br>
-                          <button mat-raised-button type="submit" class="btn btn-info pull-right">Thêm</button>
+                          <div class="row">
+                                <div class="col-md-12">
+                                <div class="pull-right">
+                                        <button mat-raised-button type="button" color="accent" (click)="goBack()">Quay về</button>
+                                        <button *ngIf="isUpdate != true" type="button" (click)="onLamMoi()" mat-raised-button color="warn">Làm mới</button>
+                                        <button *ngIf="isUpdate" mat-raised-button type="submit" color="primary">Cập nhật thông tin</button>
+                                        <button *ngIf="isUpdate != true" mat-raised-button type="submit" color="primary">Thêm</button>
+                                        <swal
+                                        #deleteuser
+                                        title="Xóa sinh viên "
+                                        text="Bạn có muốn xóa {{TenSV}} không ?" 
+                                        type="warning"
+                                        [showCancelButton]="true"
+                                        (confirm)="onClickDeleteSinhvien(MaSV)">
+                                        </swal>
+                                        <button [swal]="deleteuser" type="button" *ngIf="isUpdate" mat-raised-button color="warn">Xóa</button>
+                                </div>
+                            </div>
+                        </div>
                           <div class="clearfix"></div>
                       </form>
                   </div>
